# export-assist-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  constraints.md  docker-compose.dev.yml  docker-compose.yml  evals.md  intent.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  security.yml  test.yml
scripts/: ingest_all.py  ingest_regulations.py  setup.sh  update_sanctions.py
src/export_control_mcp/: __init__.py  audit.py  config.py  server.py
src/export_control_mcp/data/: __init__.py
src/export_control_mcp/data/ingest/: __init__.py  base.py  csl_ingest.py  ear_ingest.py  ecfr_ingest.py  sanctions_ingest.py
src/export_control_mcp/models/: __init__.py  classification.py  errors.py  regulations.py  sanctions.py
src/export_control_mcp/rag/: __init__.py  chunking.py
src/export_control_mcp/resources/: __init__.py  country_sanctions.py  doe_nuclear.py  reference_data.py
src/export_control_mcp/resources/data/: country_sanctions.json
src/export_control_mcp/services/: __init__.py  embeddings.py  federal_register.py  rag.py  sanctions_db.py  vector_store.py
src/export_control_mcp/tools/: __init__.py  classification.py  doe_nuclear.py  regulations.py  sanctions.py
tests/: __init__.py  conftest.py  test_audit.py
tests/test_data_ingest/: test_base_ingestor.py  test_csl_ingest.py  test_ear_ingest.py  test_ecfr_ingest.py  test_sanctions_ingest.py
tests/test_data_validation/: __init__.py  test_cfr810_data.py  test_country_groups.py  test_cross_reference.py  test_eccn_usml.py  test_glossary.py
tests/test_integration/: __init__.py  test_mcp_tools.py
tests/test_rag/: __init__.py  test_chunking.py
tests/test_resources/: test_country_sanctions.py
tests/test_services/: test_csl_db.py  test_embeddings.py  test_sanctions_db.py  test_vector_store.py
tests/test_tools/: test_classification.py  test_doe_nuclear.py  test_regulations.py  test_sanctions.py
