[project]
name = "export-control-mcp"
version = "0.1.0"
description = "MCP server for export control compliance - EAR/ITAR regulations, sanctions lists, and commodity classifications"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Export Control MCP Team" }
]
keywords = ["mcp", "export-control", "ear", "itar", "ofac", "sanctions", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    # MCP Framework
    "fastmcp>=0.4.0",

    # Vector Store & Embeddings
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",

    # Data Models & Config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Async HTTP (for sanctions list updates)
    "httpx>=0.25.0",

    # Document Processing
    "pypdf>=3.0.0",
    "docling>=2.0.0",  # Advanced PDF/document parsing (IBM)
    "openpyxl>=3.1.0",  # Excel file parsing (BIS Entity List)
    "lxml>=5.0.0",  # XML parsing (OFAC SDN, eCFR)
    "defusedxml>=0.7.0",  # Secure XML parsing (prevents XXE attacks)

    # SQLite fuzzy matching
    "rapidfuzz>=3.0.0",

    # Token counting for chunking
    "tiktoken>=0.5.0",

    # Security: pin transitive dependencies to fix CVEs
    "urllib3>=2.6.3",  # CVE-2025-50182, CVE-2025-50181, CVE-2025-66418, CVE-2025-66471, CVE-2026-21441
    "setuptools>=78.1.1",  # PYSEC-2022-43012, PYSEC-2025-49, CVE-2024-6345
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1.0",
]

[project.scripts]
export-control-mcp = "export_control_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/export_control_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",    # Line too long - many long strings in export control descriptions
    "SIM105",  # contextlib.suppress - optional style preference
    "SIM108",  # Ternary operator - not always more readable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM102"]  # Nested if statements ok in tests for clarity

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
